﻿20/07/2014  -  1.3 : https://github.com/TI-Planet/API/commit/ef6eaba66f3f815ea10603d273ecb0da120928d1
--------------------------------------------------------------------------------------------------------------
    - Added the "list" request type to get a list of all public uploads (files actually uploaded, not created with our generators)
    - The search request now accepts a category filter :   ...&req=search&category=math   for example.
    - gz compression is now always enabled, so the manual flag for that is gone.
    - Fix some XML encoding issue (unescaped characters that messes up SimpleXMLElement...)
    - Better archive visibility handling (public/unlisted/private). (Actually this was done some time ago, just not committed...)
    - 'prettyjson' output format added.
    - No change on the auth. side, although Apache has been updated since last time, so HTTP auth could be worked on...
    - Misc. README changes.



30/08/2013  -  1.2 : https://github.com/TI-Planet/API/commit/3a33e075ec6e8a259dbf4cc14875891ca2dd3dc2
--------------------------------------------------------------------------------------------------------------
    - Removed the [useless] limit in number of results (it was 500 before)
    - You can now list all files for a given platform, as requested :   ...&req=search&platform=68k   for example.
    - Changed all occurences of "title" by "name" which makes more sense, I believe.
    - Rewrote the wtf-esque multiple-fields-to-array things, which simplified other things.
    - "Author", "Category", and "Platform" fields are now arrays of string(s)

    HTTP Auth is still in the todo list but it quite heavily depends on getting apache to run correctly, which is not a quickfix...
    For now, no changes to the the method of geetting results : http get/post with the api key parameter.



15/08/2013  -  1.1 : https://github.com/TI-Planet/API/commit/6dc9c20b761753d08104a9a14173fbbae9e22eaa