@@ -1,12 +1,18 @@
 <?php
 
 /*   Adrien 'Adriweb' Bertrand
- *   v1.3 - July 20th, 2014
+ *   v2.0 - Feb. 27th, 2015
  *   tiplanet.org
  */
 
-include("connect_pdo.php");
-include("functions.php");
+/* @var $pdo    PDO */
+global $pdo;
+
+include_once "/data/web/vhosts/tiplanet.org/ROOT/archivesv2/ArchiveManager.php";
+include_once "functions.php";
+
+/* @var $arcMan ArcMan_v1 */
+$arcMan = ArchiveManager::create(AM_Mode::Read, AM_User::$DummyUserData, AM_Version::v1);
 
 define('TIME_START', microtime());
 
@@ -27,121 +33,87 @@ if (@ishere($_REQUEST["key"])) {
         $resCount = 0;
         if (@ishere($_REQUEST['req'])) {
             $reqType = $_REQUEST['req'];
-            switch ($reqType) {
+            switch ($reqType)
+            {
                 case "arc":
+                case "info":
                     if (@ishere($_REQUEST['arcID'])) {
                         $arcID = (int)$_REQUEST['arcID'];
-
-                        if ($arcID > 0) {
-                            $cols = "archives.id as arcID, nom AS name, date AS upload_date, author, author2, author3, author4, "
-                                . "categorie AS category, categorie2 AS category2, categorie3 AS category3, categorie4 AS category4, "
-                                . "capture AS screenshot, fichier AS url, hit AS dlcount, os AS nspire_os, licence.title AS license, "
-                                . "private, deleted";
-
-                            $req = $pdo->prepare('SELECT ' . $cols . ' FROM archives, licence WHERE archives.id = :arcID AND licence.id=archives.licence');
-                            $req->execute(array(':arcID' => $arcID));
-                            $req->setFetchMode(PDO::FETCH_ASSOC);
-
+                        if ($arcID > 0)
+                        {
                             $needStatus = true;
-                            foreach ($req as $item) {
-                                $resCount++;
-                                if ($item["deleted"]) {
-                                    output_status(32, "This archive has been deleted.");
-                                    $needStatus = false;
-                                } else if ($item["private"] != "0") {
-                                    output_status(32, "This archive is not public.");
-                                    $needStatus = false;
-                                } else {
-                                    $item = improve($item);
-                                    output($item);
-                                }
-                            }
-                            if ($resCount == 0) {
+
+                            $arcMan->select_archive($arcID);
+                            $arc = $arcMan->get_archive_info();
+
+                            if ($arc === null) {
                                 output_status(31, "This archive does not exist !");
                             } else {
+                                if ($arc->deleted == true) {
+                                    output_status(32, "This archive has been deleted.");
+                                    $needStatus = false;
+                                } else if ($arc->private == true) {
+                                    output_status(32, "This archive is not public.");
+                                    $needStatus = false;
+                                }
                                 if ($needStatus) {
-                                    output_resultsNumber($resCount);
+                                    output_resultsNumber(1);
                                     output_status(0, "Request successful (" . abs(round((microtime() - TIME_START), 4)) . " s.)");
                                 }
+                                output(AM_to_API($arc));
                             }
                         } else {
-                            output_status(30, "No (valid) archive id ('arcID') given !");
+                            output_status(30, "Invalid archive id ('arcID') given !");
                         }
                     } else {
-                        output_status(30, "No (valid) archive id ('arcID') given !");
+                        output_status(30, "No archive id ('arcID') given !");
                     }
                     break;
-                case "list":
-                    $cols = "archives.id as arcID, nom AS name, categorie AS category";
-                    $req = $pdo->prepare('SELECT ' . $cols . ' FROM archives WHERE private=0 AND generator=0 AND deleted IS NULL ');
-                    $req->execute();
-                    $req->setFetchMode(PDO::FETCH_ASSOC);
 
-                    foreach ($req as $item) {
-                        $resCount++;
-                        output($item);
+                case "list":
+                    $archives = $arcMan->search([["private","=","0"],["deleted","IS","NULL"], ["generator","=","0"]], ["id", "name", "categories"], ["hitsD"], 99999);
+
+                    foreach ($archives as $arc) {
+                        output(AM_to_API($arc, true));
                     }
-                    output_resultsNumber($resCount);
-                    output_status(0, "Request successful (listing all public uploads with their primary category). " . ($debug ? " (" . abs(round((microtime() - TIME_START), 4)) . " s.)" : ""));
+                    output_resultsNumber(count($results));
+                    output_status(0, "Request successful (listing all public uploads with their categories). " . ($debug ? " (" . abs(round((microtime() - TIME_START), 4)) . " s.)" : ""));
                     break;
+
                 case "search":
                     if (@ishere($_REQUEST['name']) || @ishere($_REQUEST['platform']) || @ishere($_REQUEST['author']) || @ishere($_REQUEST['category'])) {
 
-                        $filterName = $filterAuthor = $filterPlatform = $filterCategory = "";
-                        $params = array();
+                        $filters = [ ["private","=","0"],["deleted","IS","NULL"], ["generator","=","0"] ];
 
                         if (@ishere($_REQUEST['platform'])) {
-                            $filterPlatform = "AND (categorie REGEXP CONCAT('(.*) ', :platform1 , '$')"
-                                            . " OR categorie2 REGEXP CONCAT('(.*) ', :platform2 , '$')"
-                                            . " OR categorie3 REGEXP CONCAT('(.*) ', :platform3 , '$')"
-                                            . " OR categorie4 REGEXP CONCAT('(.*) ', :platform4 , '$')) ";
-                            $params[":platform1"] = $params[":platform2"] = $params[":platform3"] = $params[":platform4"] = $_REQUEST['platform'];
+                            $platform = $_REQUEST['platform'];
+                            array_push($filters, ["platform", "REGEXP", ".*{$platform}.*"]);
                         }
-
                         if (@ishere($_REQUEST['category'])) {
-                            $filterCategory = "AND (categorie REGEXP CONCAT( :cat1 , '(.*) ')"
-                                            . " OR categorie2 REGEXP CONCAT( :cat2 , '(.*) ')"
-                                            . " OR categorie3 REGEXP CONCAT( :cat3 , '(.*) ')"
-                                            . " OR categorie4 REGEXP CONCAT( :cat4 , '(.*) ')) ";
-                            $params[":cat1"] = $params[":cat2"] = $params[":cat3"] = $params[":cat4"] = $_REQUEST['category'];
+                            $category = $_REQUEST['category'];
+                            array_push($filters, ["category", "REGEXP", ".*{$category}.*"]);
                         }
-
                         if (@ishere($_REQUEST['name'])) {
-                            if (strlen($_REQUEST['name']) < 5) {
-                                $filterName = "AND nom REGEXP CONCAT( :name , '(.*)') ";
-                            } else {
-                                $filterName = "AND nom REGEXP CONCAT('(.*)', :name , '(.*)') ";
-                            }
-                            $params[":name"] = $_REQUEST['name'];
+                            $name = $_REQUEST['name'];
+                            array_push($filters, (strlen($name) <= 5) ? ["name", "=", $name] : ["name", "REGEXP", ".*{$name}.*"]);
                         }
-
                         if (@ishere($_REQUEST['author'])) {
-                            if (strlen($_REQUEST['author']) <= 5) {
-                                $filterAuthor = "AND author = :author ";
-                            } else {
-                                $filterAuthor = "AND author REGEXP CONCAT('(.*)', :author , '(.*)') ";
-                            }
-                            $params[":author"] = $_REQUEST['author'];
+                            $author = $_REQUEST['author'];
+                            array_push($filters, (strlen($author) <= 5) ? ["author", "=", $author] : ["author", "REGEXP", ".*{$author}.*"]);
                         }
 
-                        $cols = "archives.id as arcID, nom AS name, categorie AS category, categorie2 AS category2, categorie3 AS category3, categorie4 AS category4";
+                        $archives = $arcMan->search($filters, ["id", "name", "categories"], ["hitsD"], 99999);
 
-                        $req = $pdo->prepare('SELECT ' . $cols . ' FROM archives WHERE private=0 AND deleted IS NULL ' . $filterPlatform . $filterCategory . $filterAuthor . $filterName);
-                        $req->execute($params);
-                        $req->setFetchMode(PDO::FETCH_ASSOC);
-
-                        foreach ($req as $item) {
-                            $resCount++;
-                            improve_categories($item); // (platform)
-                            unset($item["category"], $item["nspire_os"]);
-                            output($item);
+                        foreach ($archives as $arc) {
+                            output(AM_to_API($arc, true));
                         }
-                        output_resultsNumber($resCount);
+                        output_resultsNumber(count($results));
                         output_status(0, "Request successful" . ($debug ? " (" . abs(round((microtime() - TIME_START), 4)) . " s.)" : ""));
                     } else {
                         output_status(20, "At least 1 search filter ('name', 'author', 'category', 'platform') has to be given !");
                     }
                     break;
+
                 default:
                     output_status(11, "Unrecognized request type : '" . $reqType . "' !");
                     break;
