@@ -1,13 +1,0 @@
-<?php
-
-try {
-    $pdo = new PDO('mysql:host=' . $dbhost . ';dbname=' . $dbname, $dbuser, $dbpasswd);
-    $pdo->exec('SET NAMES utf8');
-    $pdo->setAttribute(PDO::ATTR_EMULATE_PREPARES, false);
-    $pdo->setAttribute(PDO::ATTR_ERRMODE, PDO::ERRMODE_EXCEPTION);
-} catch (Exception $e) {
-    echo 'DB Connection Error';
-    die();
-}
-
-?>
