@@ -1,9 +1,17 @@
-﻿20/07/2014  -  1.3 : https://github.com/TI-Planet/API/commit/ef6eaba66f3f815ea10603d273ecb0da120928d1
+﻿27/02/2015  -  2.0 : 
+--------------------------------------------------------------------------------------------------------------
+    - Complete rewrite of the code interacting with the DB: the API now uses the internal ArchiveManager to make queries and return data accordingly.
+    - A consequence of that is that more fields are available on the info/arc request type, for instance.
+    - No change in the API itself, it's 100% backwards-compatible
+
+
+
+20/07/2014  -  1.3 : https://github.com/TI-Planet/API/commit/ef6eaba66f3f815ea10603d273ecb0da120928d1
 --------------------------------------------------------------------------------------------------------------
     - Added the "list" request type to get a list of all public uploads (files actually uploaded, not created with our generators)
     - The search request now accepts a category filter :   ...&req=search&category=math   for example.
     - gz compression is now always enabled, so the manual flag for that is gone.
-    - Fix some XML encoding issue (unescaped characters that messes up SimpleXMLElement...)
+    - Fix some XML encoding issue (unescaped characters that mess up SimpleXMLElement...)
     - Better archive visibility handling (public/unlisted/private). (Actually this was done some time ago, just not committed...)
     - 'prettyjson' output format added.
     - No change on the auth. side, although Apache has been updated since last time, so HTTP auth could be worked on...
